relay-general/src/store/snapshots/relay_general__store__normalize__tests__logentry_error.snap
---
source: relay-general/src/store/normalize.rs
expression: event.to_json_pretty().unwrap()
---
{
  "event_id": "74ad1301f4df489ead37d757295442b1",
  "level": "error",
  "type": "default",
  "logentry": null,
  "logger": "",
  "platform": "python",
  "timestamp": 1668148328.308933,
  "received": 1668149126.04596,
  "_meta": {
    "logentry": {
      "": {
        "err": [
          [
            "invalid_data",
            {
              "reason": "no message present"
            }
          ]
        ],
        "val": {
          "formatted": null,
          "message": null,
          "params": [
            "bogus"
          ]
        }
      }
    }
  }
}
