relay-general/src/store/snapshots/relay_general__store__normalize__tests__normalize_logger_empty.snap
---
source: relay-general/src/store/normalize.rs
expression: event
---
{
  "event_id": "7637af36578e4e4592692e28a1d6e2ca",
  "level": "error",
  "type": "default",
  "logger": "",
  "platform": "java"
}
