relay-general/src/store/snapshots/relay_general__store__normalize__tests__normalize_logger_word_trimmed_before_max.snap
---
source: relay-general/src/store/normalize.rs
expression: event
---
{
  "event_id": "7637af36578e4e4592692e28a1d6e2ca",
  "level": "error",
  "type": "default",
  "logger": "*.this_part-is-kept.this_right_here-is_a-very_long_word",
  "platform": "java"
}
